--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "philo.h": "c",
         "__threading_support": "c",
         "pthread.h": "c",
-        "__locale": "c"
+        "__locale": "c",
+        "philo_bonus.h": "c"
     }
 }
