bonus try fix sem

--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -2,14 +2,11 @@ CC = cc
 CFLAGS = -Wall -Wextra -Werror ${INCLUDE}
 NAME = philo_bonus
 SRC = 	src/main.c \
-		src/utils/check_args.c \
+		src/utils/cleanup.c \
+		src/utils/init.c \
+		src/utils/start_processes.c \
 		src/utils/utils.c \
-		src/utils/init_data.c \
-		src/utils/time_utils.c \
-		src/utils/monitor.c \
-		src/utils/philo_actions.c \
-		src/utils/print_utils.c 
-
+		src/utils/validate_args.c 
 INCLUDE = -I./include
 OBJ = ${SRC:.c=.o}
 
