bonus use other way

--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -2,11 +2,11 @@ CC = cc
 CFLAGS = -Wall -Wextra -Werror ${INCLUDE}
 NAME = philo_bonus
 SRC = 	src/main.c \
-		src/utils/cleanup.c \
-		src/utils/init.c \
-		src/utils/start_processes.c \
 		src/utils/utils.c \
-		src/utils/validate_args.c 
+		src/utils/init.c \
+		src/utils/validate_args.c \
+		src/utils/start_processes.c \
+
 INCLUDE = -I./include
 OBJ = ${SRC:.c=.o}
 
