--- a/philo_bonus/.vscode/settings.json
+++ b/philo_bonus/.vscode/settings.json
@@ -57,6 +57,7 @@
   "C_Cpp_Runner.useLinkTimeOptimization": false,
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
-    "philo_bonus.h": "c"
+    "philo_bonus.h": "c",
+    "time.h": "c"
   }
 }
