--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -2,10 +2,12 @@ CC = cc
 CFLAGS = -Wall -Wextra -Werror ${INCLUDE}
 NAME = philo_bonus
 SRC = 	src/main.c \
-		src/utils/utils.c \
+		src/utils/cleanup.c \
 		src/utils/init.c \
-		src/utils/validate_args.c \
+		src/utils/philo_actions.c \
 		src/utils/start_processes.c \
+		src/utils/utils.c \
+		src/utils/validate_args.c 
 
 INCLUDE = -I./include
 OBJ = ${SRC:.c=.o}
