--- a/philo_bonus/.vscode/settings.json
+++ b/philo_bonus/.vscode/settings.json
@@ -58,6 +58,8 @@
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
     "philo_bonus.h": "c",
-    "time.h": "c"
+    "time.h": "c",
+    "unistd.h": "c",
+    "fcntl.h": "c"
   }
 }
